[project]
name = "dmosopt"
version = "0.75"
description = "Distributed multi-objective surrogate optimization algorithm."
authors = [
    { name = "Ivan Raikov", email = "ivan.g.raikov@gmail.com" }
]
dependencies = [
    "mpi4py>=4.0.0",
    "h5py>=3.11.0",
    "scikit-learn>=1.5.1",
    "distwq @ git+https://github.com/iraikov/distwq.git",
    "scipy>=1.13.1",
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
# Main functions
dmosopt-analyze = "dmosopt.dmosopt_analyze:main"
dmosopt-train = "dmosopt.dmosopt_train:main"
dmosopt-onestep = "dmosopt.dmosopt_onestep:main"

[project.optional-dependencies]
extras = [
    "gpytorch>=1.12",
    "salib>=1.5.1",
    "gpflow>=2.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["dmosopt"]
